# AIO_MCPServerFramework

./: MCPServerFramework.py  helloword.py  main.py
aio_mcp_server_framework/: INSTALL.md  MANIFEST.in  README.md  build.py  pyproject.toml  setup.cfg  setup.py
aio_mcp_server_framework/aio_mcp_server_framework/: __init__.py  cli.py  core.py
aio_mcp_server_framework/aio_mcp_server_framework/templates/: main.py.template
aio_mcp_server_framework/aio_mcp_server_framework/tests/: __init__.py  test_core.py
