[metadata]
name = aio-mcp-server-framework
version = attr: aio_mcp_server_framework.__version__
author = AIO MCP Server Framework Team
author_email = your-email@example.com
description = 一个用于构建MCP服务器的综合框架
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/aio-mcp-server-framework
project_urls =
    Bug Tracker = https://github.com/yourusername/aio-mcp-server-framework/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    mcp>=0.5.0
    uvicorn>=0.17.6
    starlette>=0.20.4

[options.extras_require]
dev =
    black
    pytest
    pytest-cov
    mypy
    flake8
    twine
    build

[options.entry_points]
console_scripts =
    aio-mcp = aio_mcp_server_framework.cli:main 